[project]
name = "ed"
version = "0.1.0"
description = "A small package for using exact diagonalization. Note, that this is part of the larger project ??."
readme = "README.md"
requires-python = ">=3.11"

# only include dependencies for normal package use
dependencies = [
    "numpy>=2.3",
    "scipy>=1.16",
    "matplotlib>=3.10",
    "hydra-core==1.3",
    "pyyaml==6.0"
]


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
